Fix display bug in Collapse component

--- a/src/pages/a-propos/styles.scss
+++ b/src/pages/a-propos/styles.scss
@@ -1,7 +1,6 @@
 .containerApropos {
   max-width: 1240px;
   width: 100%;
-  height:100% ;
   margin: 0 auto;
 
   .collapseContainer {
